[gd_scene load_steps=10 format=3 uid="uid://b2hvpjxn7hvg8"]

[ext_resource type="Script" path="res://UI/Scripts/start_menu.gd" id="1_ofcxw"]
[ext_resource type="Texture2D" uid="uid://plvv6qa8a2oi" path="res://Assets/Backgrounds/Parallax/Background.png" id="1_olhgv"]
[ext_resource type="Texture2D" uid="uid://bwo8otqjx0u8a" path="res://Assets/Backgrounds/Parallax/stars.png" id="2_2t80s"]
[ext_resource type="Script" path="res://UI/Scripts/parallax.gd" id="2_at2xs"]
[ext_resource type="Texture2D" uid="uid://b3tmuauy2fbpx" path="res://Assets/Backgrounds/Parallax/Dust.png" id="3_pyjj4"]
[ext_resource type="Texture2D" uid="uid://blpp03x1y1rwn" path="res://Assets/Backgrounds/Parallax/Planets.png" id="4_n6ppx"]
[ext_resource type="Texture2D" uid="uid://5m3ptkrqas40" path="res://Assets/Backgrounds/Parallax/Nebulae.png" id="5_6ekxd"]
[ext_resource type="Theme" uid="uid://do1kf4d65vh5b" path="res://UI/Styles/start_menu.tres" id="8_vjj0j"]
[ext_resource type="PackedScene" uid="uid://4ss22hxgqr4" path="res://Scenes/settings_menu.tscn" id="9_k06bd"]

[node name="Start Menu" type="Node2D"]
script = ExtResource("1_ofcxw")

[node name="Background" type="ParallaxBackground" parent="."]
offset = Vector2(577.28, 382.99)
transform = Transform2D(1, 0, 0, 1, 577.28, 382.99)
script = ExtResource("2_at2xs")
scroll_speed = 15

[node name="Background" type="Sprite2D" parent="Background"]
position = Vector2(-1.64001, 0.00500488)
texture = ExtResource("1_olhgv")

[node name="Star Parallax" type="ParallaxLayer" parent="Background"]
position = Vector2(-0.140015, -4.995)
motion_scale = Vector2(-1, 1)
motion_mirroring = Vector2(1280, 0)

[node name="Stars" type="Sprite2D" parent="Background/Star Parallax"]
texture = ExtResource("2_2t80s")

[node name="Dust Parallax" type="ParallaxLayer" parent="Background"]
modulate = Color(0.678431, 0.678431, 0.678431, 1)
motion_mirroring = Vector2(1280, 0)

[node name="Dust" type="Sprite2D" parent="Background/Dust Parallax"]
texture = ExtResource("3_pyjj4")

[node name="Planet Parallax" type="ParallaxLayer" parent="Background"]
position = Vector2(157.72, -154.99)
motion_mirroring = Vector2(1500, 0)

[node name="Planets" type="Sprite2D" parent="Background/Planet Parallax"]
texture = ExtResource("4_n6ppx")

[node name="Planet Parallax2" type="ParallaxLayer" parent="Background"]
rotation = -1.47131
motion_scale = Vector2(0.5, 1)
motion_mirroring = Vector2(1280, 0)

[node name="Planets2" type="Sprite2D" parent="Background/Planet Parallax2"]
position = Vector2(665.72, 84.01)
texture = ExtResource("4_n6ppx")
offset = Vector2(34.225, 0)

[node name="Nebulae Parallax" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2(5, 0)
motion_mirroring = Vector2(1280, 0)

[node name="Nebulae" type="Sprite2D" parent="Background/Nebulae Parallax"]
position = Vector2(9.71997, 222.01)
texture = ExtResource("5_6ekxd")

[node name="Main Screen" type="Node2D" parent="."]

[node name="New Game" type="Button" parent="Main Screen"]
offset_left = 277.0
offset_top = 289.0
offset_right = 861.0
offset_bottom = 374.0
theme = ExtResource("8_vjj0j")
text = "New Game"

[node name="Continue" type="Button" parent="Main Screen"]
offset_left = 277.0
offset_top = 382.0
offset_right = 861.0
offset_bottom = 467.0
theme = ExtResource("8_vjj0j")
text = "Continue"

[node name="Settings" type="Button" parent="Main Screen"]
offset_left = 278.0
offset_top = 475.0
offset_right = 550.0
offset_bottom = 573.0
theme = ExtResource("8_vjj0j")
text = "Settings"

[node name="Quit" type="Button" parent="Main Screen"]
offset_left = 588.0
offset_top = 475.0
offset_right = 860.0
offset_bottom = 573.0
theme = ExtResource("8_vjj0j")
text = "Quit"

[node name="Label" type="Label" parent="Main Screen"]
offset_left = 282.0
offset_top = 179.0
offset_right = 859.0
offset_bottom = 270.0
theme = ExtResource("8_vjj0j")
text = "VoidScape"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Ship Builder" type="Button" parent="Main Screen"]
offset_left = 881.0
offset_top = 294.0
offset_right = 999.0
offset_bottom = 379.0
theme = ExtResource("8_vjj0j")
text = "Ship Builder
"

[node name="SettingsMenu" parent="." instance=ExtResource("9_k06bd")]
visible = false

[connection signal="pressed" from="Main Screen/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Main Screen/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Main Screen/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Main Screen/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Main Screen/Ship Builder" to="." method="_on_ship_builder_pressed"]
[connection signal="menu_closed" from="SettingsMenu" to="." method="_on_settings_menu_menu_closed"]
